--- a/index.html
+++ b/index.html
@@ -8,47 +8,55 @@
   </head>
 
   <body>
-    <div>
-      <div>
-        <div><h1>Hello, cachidiablo</h1></div>
-        <div>
+    <div class="card">
+      <div class="textcard">
+        <div class="welcome"><h1>Hello, cachidiablo</h1></div>
+        <div class="lists">
           <div>
             <h2>Social</h2>
-            <a href="https://mail.google.com/mail/u/0/#inbox">mail</a>
-            <a href="https://www.facebook.com/">facebook</a>
-            <a href="https://www.youtube.com/">youtube</a>
-            <a href="https://www.reddit.com/">reddit</a>
-            <a href="https://twitter.com/home">twitter</a>
-            <a href="https://www.tumblr.com/">tumblr</a>
-            <a href="https://boards.4channel.org/g/catalog">/g/-technology</a>
-            <a href="https://boards.4channel.org/lit/catalog">/lit/-literature</a>
+            <ul>
+              <li><a href="https://mail.google.com/mail/u/0/#inbox">Mail</a></li>
+              <li><a href="https://www.facebook.com/">Facebook</a></li>
+              <li><a href="https://www.youtube.com/">Youtube</a></li>
+              <li><a href="https://www.reddit.com/">Reddit</a></li>
+              <li><a href="https://twitter.com/home">Twitter</a></li>
+              <li><a href="https://www.tumblr.com/">Tumblr</a></li>
+              <li><a href="https://boards.4channel.org/g/catalog">/g/ - Technology</a></li>
+              <li><a href="https://boards.4channel.org/lit/catalog">/lit/ - Literature</a></li>
+            </ul>
           </div>
           <div>
             <h2>Lists</h2>
-            <a href="https://www.goodreads.com/">goodreads</a>
-            <a href="https://letterboxd.com/">letterboxd</a>
-            <a href="https://rateyourmusic.com/">rym</a>
-            <a href="https://anilist.co/user/cachidiablo/">anilist</a>
-            <a href="https://www.last.fm/user/cachidiablo">lastfm</a>
+            <ul>
+              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
+              <li><a href="https://letterboxd.com/">Letterboxd</a></li>
+              <li><a href="https://rateyourmusic.com/">Rym</a></li>
+              <li><a href="https://anilist.co/user/cachidiablo/">Anilist</a></li>
+              <li><a href="https://www.last.fm/user/cachidiablo">Lastfm</a></li>
+            </ul>
           </div>
           <div>
             <h2>Tech</h2>
-            <a href="https://archlinux.org/">archwiki</a>
-            <a href="https://github.com/">github</a>
-            <a href="https://gitlab.com/">gitlab</a>
-            <a href="https://devdocs.io/">devdocs</a>
-            <a href="https://www.theverge.com/">the verge</a>
-            <a href="https://9to5linux.com/">9to5linux</a>
-            <a href="https://www.awwwards.com/">awwwards</a>
+            <ul>
+              <li><a href="https://archlinux.org/">Archwiki</a></li>
+              <li><a href="https://github.com/">Github</a></li>
+              <li><a href="https://gitlab.com/">Gitlab</a></li>
+              <li><a href="https://devdocs.io/">Devdocs</a></li>
+              <li><a href="https://www.theverge.com/">The Verge</a></li>
+              <li><a href="https://9to5linux.com/">9to5linux</a></li>
+              <li><a href="https://www.awwwards.com/">Awwwards</a></li>
+            </ul>
           </div>
           <div>
             <h2>Else</h2>
-            <a href="https://libgen.is/">libgen</a>
-            <a href="https://b-ok.cc/">zlibrary</a>
-            <a href="https://www.ebookelo.com/">ebookelo</a>
-            <a href="https://ebiblioteca.org/">ebiblioteca</a>
-            <a href="https://cuevana3.io/">cuevana</a>
-            <a href="https://yummyanime.club/">yummyanime</a>
+            <ul>
+              <li><a href="https://libgen.is/">Libgen</a></li>
+              <li><a href="https://b-ok.cc/">Zlibrary</a></li>
+              <li><a href="https://www.ebookelo.com/">Ebookelo</a></li>
+              <li><a href="https://ebiblioteca.org/">Ebiblioteca</a></li>
+              <li><a href="https://cuevana3.io/">Cuevana</a></li>
+              <li><a href="https://yummyanime.club/">Yummyanime</a></li>
+            </ul>
           </div>
         </div>
       </div>
