--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <body>
     <div class="card">
       <div class="textcard">
-        <div class="welcome"><h1>Hello, cachidiablo</h1></div>
+        <div class="welcome"><h1>~/cachidiablo</h1></div>
         <div class="lists">
           <div>
-            <h2>Social</h2>
+            <h2>/social/</h2>
             <ul>
               <li><a href="https://mail.google.com/mail/u/0/#inbox">Mail</a></li>
               <li><a href="https://www.facebook.com/">Facebook</a></li>
@@ -26,7 +26,7 @@
             </ul>
           </div>
           <div>
-            <h2>Lists</h2>
+            <h2>/lists/</h2>
             <ul>
               <li><a href="https://www.goodreads.com/">Goodreads</a></li>
               <li><a href="https://letterboxd.com/">Letterboxd</a></li>
@@ -36,7 +36,7 @@
             </ul>
           </div>
           <div>
-            <h2>Tech</h2>
+            <h2>/tech/</h2>
             <ul>
               <li><a href="https://archlinux.org/">Archwiki</a></li>
               <li><a href="https://github.com/">Github</a></li>
@@ -48,7 +48,7 @@
             </ul>
           </div>
           <div>
-            <h2>Else</h2>
+            <h2>/else/</h2>
             <ul>
               <li><a href="https://libgen.is/">Libgen</a></li>
               <li><a href="https://b-ok.cc/">Zlibrary</a></li>
@@ -60,7 +60,7 @@
           </div>
         </div>
       </div>
-      <div><img src="./images/doomergirl.png" alt="A sad girl smoking a cigarette" style="height:600px"</div>
+      <div class="image"><img src="./images/doomergirl.png" alt="A sad girl smoking a cigarette" style="height:600px"</div>
     </div>
   </body>
 </html>
