--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <div class="card">
-      <div class="textcard">
-        <div class="welcome"><h1>Hello, cachidiablo</h1></div>
-        <div class="lists">
+    <div>
+      <div>
+        <div><h1>Hello, cachidiablo</h1></div>
+        <div>
           <div>
             <h2>Social</h2>
             <ul>
