Pre-flexbox build

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
+    <title>ホム</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
     <div>
-      <div>
-        <div><h1>Hello, cachidiablo</h1></div>
-        <div>
-          <div>
-            <h2>Social</h2>
+      <div class="fullcard">
+        <div class="welcome"><h1>お帰りなさい</h1></div>
+        <div class="linksgroup">
+          <div class="social">
+            <h2>/social/</h2>
             <ul>
               <li><a href="https://mail.google.com/mail/u/0/#inbox">Mail</a></li>
               <li><a href="https://www.facebook.com/">Facebook</a></li>
@@ -21,22 +21,10 @@
               <li><a href="https://www.reddit.com/">Reddit</a></li>
               <li><a href="https://twitter.com/home">Twitter</a></li>
               <li><a href="https://www.tumblr.com/">Tumblr</a></li>
-              <li><a href="https://boards.4channel.org/g/catalog">/g/ - Technology</a></li>
-              <li><a href="https://boards.4channel.org/lit/catalog">/lit/ - Literature</a></li>
             </ul>
           </div>
-          <div>
-            <h2>Lists</h2>
-            <ul>
-              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
-              <li><a href="https://letterboxd.com/">Letterboxd</a></li>
-              <li><a href="https://rateyourmusic.com/">Rym</a></li>
-              <li><a href="https://anilist.co/user/cachidiablo/">Anilist</a></li>
-              <li><a href="https://www.last.fm/user/cachidiablo">Lastfm</a></li>
-            </ul>
-          </div>
-          <div>
-            <h2>Tech</h2>
+          <div class="tech">
+            <h2 class="techtext">/tech/</h2>
             <ul>
               <li><a href="https://archlinux.org/">Archwiki</a></li>
               <li><a href="https://github.com/">Github</a></li>
@@ -47,20 +35,56 @@
               <li><a href="https://www.awwwards.com/">Awwwards</a></li>
             </ul>
           </div>
-          <div>
-            <h2>Else</h2>
+          <div class="lists">
+            <h2>/list/</h2>
+            <ul>
+              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
+              <li><a href="https://letterboxd.com/">Letterboxd</a></li>
+              <li><a href="https://rateyourmusic.com/">Rym</a></li>
+              <li><a href="https://anilist.co/user/cachidiablo/">Anilist</a></li>
+              <li><a href="https://www.last.fm/user/cachidiablo">Lastfm</a></li>
+            </ul>
+          </div>
+          <div class="lit">
+            <h2>/lit/</h2>
             <ul>
               <li><a href="https://libgen.is/">Libgen</a></li>
               <li><a href="https://b-ok.cc/">Zlibrary</a></li>
               <li><a href="https://www.ebookelo.com/">Ebookelo</a></li>
               <li><a href="https://ebiblioteca.org/">Ebiblioteca</a></li>
-              <li><a href="https://cuevana3.io/">Cuevana</a></li>
+            </ul>
+          </div>
+          <div class="weeb">
+            <h2>/weeb/</h2>
+            <ul>
+              <li><a href="https://anichart.net">Anichart</a></li>
+              <li><a href="https://www.animenewsnetwork.com/">Animenews</a></li>
+              <li><a href="https://spin.moe/">Spin.moe</a></li>
+              <li><a href="https://9anime.me/">9anime</a></li>
+              <li><a href="https://mangahub.io/">Mangahub</a></li>
+              <li><a href="https://readmanga.io/">Readmanga</a></li>
               <li><a href="https://yummyanime.club/">Yummyanime</a></li>
+            </ul>
+          </div>
+          <div class="chan">
+            <h2>/chan/</h2>
+            <ul>
+              <li><a href="https://boards.4channel.org/g/catalog">/g/ - Technology</a></li>
+              <li><a href="https://boards.4channel.org/lit/catalog">/lit/ - Literature</a></li>
+              <li><a href="https://boards.4channel.org/a/catalog">/a/ - anime & manga</a></li>
+              <li><a href="https://boards.4chan.org/wg/catalog">/wg/ - wallpaper general</a></li>
+              <li><a href="https://boards.4channel.org/w/catalog">/w/ - wallpaper anime</a></li>
+            </ul>
+          </div>
+          <div class="etc">
+            <h2>/etc/</h2>
+            <ul>
+              <li><a href="https://cuevana3.io/">Cuevana</a></li>
+              <li><a href="https://www.torrentday.com/t">Torrenday</a></li>
             </ul>
           </div>
         </div>
       </div>
-      <div><img src="./images/doomergirl.png" alt="A sad girl smoking a cigarette" style="height:600px"</div>
     </div>
   </body>
 </html>
