--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div>
       <div class="fullcard">
-        <div class="welcome"><h1>おかえりなさい！</h1></div>
+        <div class="welcome"><h1>~/cachidiablo</h1></div>
         <div class="linksgroup">
           <div class="social">
             <h2>/social/</h2>
