Added custom icons

--- a/index.html
+++ b/index.html
@@ -3,64 +3,86 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
+    <title>New tab</title>
     <link rel="stylesheet" href="./styles.css" />
   </head>
 
   <body>
-    <div class="card">
-      <div class="textcard">
-        <div class="welcome"><h1>~/cachidiablo</h1></div>
-        <div class="lists">
-          <div>
-            <h2>/social/</h2>
-            <ul>
-              <li><a href="https://mail.google.com/mail/u/0/#inbox">Mail</a></li>
-              <li><a href="https://www.facebook.com/">Facebook</a></li>
-              <li><a href="https://www.youtube.com/">Youtube</a></li>
-              <li><a href="https://www.reddit.com/">Reddit</a></li>
-              <li><a href="https://twitter.com/home">Twitter</a></li>
-              <li><a href="https://www.tumblr.com/">Tumblr</a></li>
-              <li><a href="https://boards.4channel.org/g/catalog">/g/ - Technology</a></li>
-              <li><a href="https://boards.4channel.org/lit/catalog">/lit/ - Literature</a></li>
-            </ul>
-          </div>
-          <div>
-            <h2>/lists/</h2>
-            <ul>
-              <li><a href="https://www.goodreads.com/">Goodreads</a></li>
-              <li><a href="https://letterboxd.com/">Letterboxd</a></li>
-              <li><a href="https://rateyourmusic.com/">Rym</a></li>
-              <li><a href="https://anilist.co/user/cachidiablo/">Anilist</a></li>
-              <li><a href="https://www.last.fm/user/cachidiablo">Lastfm</a></li>
-            </ul>
-          </div>
-          <div>
-            <h2>/tech/</h2>
-            <ul>
-              <li><a href="https://archlinux.org/">Archwiki</a></li>
-              <li><a href="https://github.com/">Github</a></li>
-              <li><a href="https://gitlab.com/">Gitlab</a></li>
-              <li><a href="https://devdocs.io/">Devdocs</a></li>
-              <li><a href="https://www.theverge.com/">The Verge</a></li>
-              <li><a href="https://9to5linux.com/">9to5linux</a></li>
-              <li><a href="https://www.awwwards.com/">Awwwards</a></li>
-            </ul>
-          </div>
-          <div>
-            <h2>/else/</h2>
-            <ul>
-              <li><a href="https://libgen.is/">Libgen</a></li>
-              <li><a href="https://b-ok.cc/">Zlibrary</a></li>
-              <li><a href="https://www.ebookelo.com/">Ebookelo</a></li>
-              <li><a href="https://ebiblioteca.org/">Ebiblioteca</a></li>
-              <li><a href="https://cuevana3.io/">Cuevana</a></li>
-              <li><a href="https://yummyanime.club/">Yummyanime</a></li>
-            </ul>
-          </div>
+    <div class="fullcard">
+      <div class="firstrow">
+        <div>
+          <a href="https://mail.google.com/mail/u/0/"><img src="./icons/mail.png" alt="Email" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://www.facebook.com"><img src="./icons/facebook.png" alt="Facebook" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://twitter.com"><img src="./icons/twitter.png" alt="Twitter" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://www.reddit.com/"><img src="./icons/reddit.png" alt="Reddit" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://github.com/"><img src="./icons/github.png" alt="Github" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://gitlab.com/"><img src="./icons/gitlab.png" alt="Gitlab" style="width: 10vh; height: 10vh" /></a>
         </div>
       </div>
-      <div class="image"><img src="./images/doomergirl.png" alt="A sad girl smoking a cigarette" style="height:600px"</div>
+
+      <div class="secondrow">
+        <div>
+          <a href="#"><img src="./icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="#"><img src="./icons/anime.png" alt="Anime" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="#"><img src="./icons/settings.png" alt="Settings" style="width: 10vh; height: 10vh" /></a>
+        </div>
+      </div>
+
+      <div class="thirdrow">
+        <div>
+          <a href="https://www.last.fm/user/cachidiablo"><img src="./icons/lastfm.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://rateyourmusic.com/~cachidiablo"><img src="./icons/sonemic.png" alt="Rate your music" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://www.goodreads.com/"><img src="./icons/goodreads.png" alt="Goodreads" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://myanimelist.net/profile/cachidiablo"><img src="./icons/myanimelist.png" alt="My anime list" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://anilist.co/user/cachidiablo/"><img src="./icons/anilist.png" alt="Anilist" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://letterboxd.com/Cachidiablo/"><img src="./icons/letterboxd.png" alt="Letterboxd" style="width: 10vh; height: 10vh" /></a>
+        </div>
+      </div>
+
+      <div class="fourthrow">
+        <div>
+          <a href="https://devdocs.io/"><img src="./icons/devdocs.png" alt="Devdocs" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://stackoverflow.com/"><img src="./icons/stackoverflow.png" alt="StackOverflow" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://convertio.co/"><img src="./icons/convertio.png" alt="Convertio" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="#"><img src="./icons/ebookelo.png" alt="Books" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://cuevana3.io/"><img src="./icons/cuevana.png" alt="Cuevana" style="width: 10vh; height: 10vh" /></a>
+        </div>
+        <div>
+          <a href="https://www.4chan.org/"><img src="./icons/4chan.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
