--- a/index.html
+++ b/index.html
@@ -10,78 +10,80 @@
   <body>
     <div class="fullcard">
       <div class="firstrow">
-        <div>
-          <a href="https://mail.google.com/mail/u/0/"><img src="./icons/mail.png" alt="Email" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://www.facebook.com"><img src="./icons/facebook.png" alt="Facebook" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://twitter.com"><img src="./icons/twitter.png" alt="Twitter" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://www.reddit.com/"><img src="./icons/reddit.png" alt="Reddit" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://github.com/"><img src="./icons/github.png" alt="Github" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://gitlab.com/"><img src="./icons/gitlab.png" alt="Gitlab" style="width: 10vh; height: 10vh" /></a>
-        </div>
+        <a href="https://mail.google.com/mail/u/0/">
+          <span><img src="./icons/mail.png" alt="Email" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://www.facebook.com">
+          <span><img src="./icons/facebook.png" alt="Facebook" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://twitter.com">
+          <span><img src="./icons/twitter.png" alt="Twitter" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://www.reddit.com/">
+          <span><img src="./icons/reddit.png" alt="Reddit" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://github.com/">
+          <span>
+            <img src="./icons/github.png" alt="Github" style="width: 10vh; height: 10vh" />
+          </span>
+        </a>
+        <a href="https://gitlab.com/">
+          <span><img src="./icons/gitlab.png" alt="Gitlab" style="width: 10vh; height: 10vh" /></span>
+        </a>
       </div>
 
       <div class="secondrow">
-        <div>
-          <a href="#"><img src="./icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="#"><img src="./icons/anime.png" alt="Anime" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="#"><img src="./icons/settings.png" alt="Settings" style="width: 10vh; height: 10vh" /></a>
-        </div>
+        <a href="#">
+          <span><img src="icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="#">
+          <span><img src="./icons/anime.png" alt="Anime" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="#">
+          <span><img src="./icons/settings.png" alt="Settings" style="width: 10vh; height: 10vh" /></span>
+        </a>
       </div>
 
       <div class="thirdrow">
-        <div>
-          <a href="https://www.last.fm/user/cachidiablo"><img src="./icons/lastfm.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://rateyourmusic.com/~cachidiablo"><img src="./icons/sonemic.png" alt="Rate your music" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://www.goodreads.com/"><img src="./icons/goodreads.png" alt="Goodreads" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://myanimelist.net/profile/cachidiablo"><img src="./icons/myanimelist.png" alt="My anime list" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://anilist.co/user/cachidiablo/"><img src="./icons/anilist.png" alt="Anilist" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://letterboxd.com/Cachidiablo/"><img src="./icons/letterboxd.png" alt="Letterboxd" style="width: 10vh; height: 10vh" /></a>
-        </div>
+        <a href="https://www.last.fm/user/cachidiablo">
+          <span><img src="./icons/lastfm.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://rateyourmusic.com/~cachidiablo">
+          <span><img src="./icons/sonemic.png" alt="Rate your music" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://www.goodreads.com/">
+          <span><img src="./icons/goodreads.png" alt="Goodreads" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://myanimelist.net/profile/cachidiablo">
+          <span><img src="./icons/myanimelist.png" alt="My anime list" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://anilist.co/user/cachidiablo/">
+          <span><img src="./icons/anilist.png" alt="Anilist" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://letterboxd.com/Cachidiablo/">
+          <span><img src="./icons/letterboxd.png" alt="Letterboxd" style="width: 10vh; height: 10vh" /></span>
+        </a>
       </div>
 
       <div class="fourthrow">
-        <div>
-          <a href="https://devdocs.io/"><img src="./icons/devdocs.png" alt="Devdocs" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://stackoverflow.com/"><img src="./icons/stackoverflow.png" alt="StackOverflow" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://convertio.co/"><img src="./icons/convertio.png" alt="Convertio" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="#"><img src="./icons/ebookelo.png" alt="Books" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://cuevana3.io/"><img src="./icons/cuevana.png" alt="Cuevana" style="width: 10vh; height: 10vh" /></a>
-        </div>
-        <div>
-          <a href="https://www.4chan.org/"><img src="./icons/4chan.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></a>
-        </div>
+        <a href="https://devdocs.io/">
+          <span><img src="./icons/devdocs.png" alt="Devdocs" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://stackoverflow.com/">
+          <span><img src="./icons/stackoverflow.png" alt="StackOverflow" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://convertio.co/">
+          <span><img src="./icons/convertio.png" alt="Convertio" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="#">
+          <span><img src="./icons/ebookelo.png" alt="Books" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://cuevana3.io/">
+          <span><img src="./icons/cuevana.png" alt="Cuevana" style="width: 10vh; height: 10vh" /></span>
+        </a>
+        <a href="https://www.4chan.org/">
+          <span><img src="./icons/4chan.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></span>
+        </a>
       </div>
     </div>
   </body>
