--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="greetings"><h1>お帰りなさい</h1></div>
     <div class="fullcard">
       <div class="firstrow">
         <a href="https://mail.google.com/mail/u/0/">
@@ -85,6 +86,7 @@
           <span><img src="./icons/4chan.png" alt="Lastfm" style="width: 10vh; height: 10vh" /></span>
         </a>
       </div>
+      <img class="waifu" src="images/lainpng.png" alt="Lain Iwakura" style="height: 80vh" />
     </div>
   </body>
 </html>
