Added link to greetings

--- a/pages/anime.html
+++ b/pages/anime.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Anime</title>
     <link rel="stylesheet" href="../styles.css" />
+    <link rel="icon" href="../icons/firefox.png" />
   </head>
 
   <body>
-    <div class="greetings"><h1>お帰りなさい</h1></div>
+    <a href="../index.html" class="greetings"
+      ><span><h1>お帰りなさい</h1></span></a
+    >
     <div class="fullcard">
       <div class="firstrow">
         <a href="https://anichart.net/">
