--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>New tab</title>
+    <title>New Tab</title>
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="./icons/firefox.png" />
   </head>
 
   <body>
-    <div class="greetings"><h1>お帰りなさい</h1></div>
+    <a href="#" class="greetings"
+      ><span><h1>お帰りなさい</h1></span></a
+    >
     <div class="fullcard">
       <div class="firstrow">
         <a href="https://mail.google.com/mail/u/0/">
@@ -35,9 +38,9 @@
 
       <div class="secondrow">
         <a href="#">
-          <span><img src="icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></span>
+          <span><img src="./icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></span>
         </a>
-        <a href="#">
+        <a href="./pages/anime.html">
           <span><img src="./icons/anime.png" alt="Anime" style="width: 10vh; height: 10vh" /></span>
         </a>
         <a href="#">
