--- a/pages/anime.html
+++ b/pages/anime.html
@@ -20,18 +20,11 @@
         <a href="https://www.animenewsnetwork.com/">
           <span><img src="../icons/animenews.png" alt="Anime News" style="width: 10vh; height: 10vh" /></span>
         </a>
-      </div>
-
-      <div class="secondrow">
         <a href="https://9anime.me/">
           <span><img src="../icons/9anime.png" alt="9anime" style="width: 10vh; height: 10vh" /></span>
         </a>
         <a href="https://yummyanime.club/">
           <span><img src="../icons/yummy.png" alt="YummyAnime" style="width: 10vh; height: 10vh" /></span>
-        </a>
-      </div>
-
-      <div class="thirdrow">
         <a href="https://mangahub.io/updates//">
           <span><img src="../icons/mangahub.png" alt="Mangahub" style="width: 10vh; height: 10vh" /></span>
         </a>
@@ -40,7 +33,7 @@
         </a>
       </div>
 
-      <div class="fourthrow" style="width: 78.5vh">
+      <div class="fourthrow">
         <a href="https://spin.moe/">
           <span><img src="../icons/spinmoe.png" alt="Spin" style="width: 10vh; height: 10vh" /></span>
         </a>
