--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="https://mail.google.com/mail/u/0/">
           <span><img src="./icons/mail.png" alt="Email" style="width: 10vh; height: 10vh" /></span>
         </a>
-        <a href="https://www.facebook.com">
-          <span><img src="./icons/facebook.png" alt="Facebook" style="width: 10vh; height: 10vh" /></span>
+        <a href="https://www.youtube.com/">
+          <span><img src="./icons/youtube.png" alt="Youtube" style="width: 10vh; height: 10vh" /></span>
         </a>
         <a href="https://twitter.com">
           <span><img src="./icons/twitter.png" alt="Twitter" style="width: 10vh; height: 10vh" /></span>
