--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="secondrow">
-        <a href="#">
+        <a href="./pages/languages.html">
           <span><img src="./icons/languages.png" alt="Languages" style="width: 10vh; height: 10vh" /></span>
         </a>
         <a href="./pages/anime.html">
