--- a/pages/anime.html
+++ b/pages/anime.html
@@ -33,7 +33,7 @@
         </a>
       </div>
 
-      <div class="fourthrow">
+      <div class="fourthrow lang">
         <a href="https://spin.moe/">
           <span><img src="../icons/spinmoe.png" alt="Spin" style="width: 10vh; height: 10vh" /></span>
         </a>
